# Memewebsite

./: CMakeLists.txt
backend/cpp/: CMakeLists.txt  main.cpp  recommender.cpp  recommender.hpp  utils.cpp  utils.hpp
backend/data/: embeddings.csv  embeddings.npy  meme_paths.json
backend/data/memes/: huh_..👂
backend/python/: embed_memes.py  py_recommender.py
frontend/: index.html  script.js  style.css
